compiler/testData/diagnostics/tests/multiplatform/enum/constructorInHeaderEnum.fir.kt
// MODULE: m1-common
// FILE: common.kt

<!NO_ACTUAL_FOR_EXPECT!>expect enum class En<!EXPECTED_ENUM_CONSTRUCTOR!>(x: Int)<!> {
    E1,
    E2(42),
    ;

    <!EXPECTED_ENUM_CONSTRUCTOR!>constructor(s: String)<!>
}<!>

<!NO_ACTUAL_FOR_EXPECT!>expect enum class En2 {
    E1()
}<!>
